<resources>
    <string name="app_name">PON</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_history">HistoryActivity</string>

    <!-- Title of screen -->
    <string name="title_history">History</string>
    <string name="title_profile_shop_following">Shop Following</string>
    <string name="title_select_shop_following">Shop Following Selection</string>
    <string name="title_shop_coupons_filter">Shop Coupons</string>
    <string name="title_shop_map">Shop Map</string>


    <!--Mine : 328927604113339-->
    <!--customer : 324209427951910 -->
    <string name="facebook_app_id">324209427951910</string>

    <!-- Splash screen -->
    <string name="your_photo_is_in_coupons">あなたの写真がクーポンに！?</string>
    <string name="login_facebook">Facebookではじめる</string>
    <string name="login_twitter">Twitterではじめる"</string>
    <string name="login_email">メールアドレスではじめる</string>

    <!-- Login screen & registration-->
    <string name="password">パスワード</string>
    <string name="register_new_member">新規会員登録</string>
    <string name="user_name_registration">ユーザーネーム</string>
    <string name="password_confirm">パスワード（確認）</string>
    <string name="registration_with_content">こちらの内容で登録</string>
    <string name="already_member">すでに会員の方は、</string>
    <string name="click_here"><u>こちらへ</u></string>
    <string name="click_new_member_registration"><u>新規会員登録</u></string>
    <string name="click_reset_password">パスワードを忘れたの場合は</string>
    <string name="enter_your_register_email">お客様の登録メールアドレスを入力してください</string>
    <string name="reset_password">パスワードを再設定する</string>
    <string name="send">送信</string>

    <string name="navigation">渋谷区</string>
    <string name="search_place_shop_name">地名/ショップ名を入力</string>
    <string name="popularity">人気</string>
    <string name="newest">新着</string>
    <string name="near">近く</string>
    <string name="deals">お得</string>
    <string name="view_more">もっと見る</string>
    <string name="member_only_coupons">会員限定クーポン</string>
    <string name="membership_coupons_required_1">このクーポンは会員登録す</string>
    <string name="membership_coupons_required_2">ると、ご利用頂けます。</string>
    <string name="new_member_registration">が新規会員登録</string>
    <string name="start_free">無料ではじめる</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>

    <!--Profile screen -->
    <string name="follow">フォロー</string>
    <string name="follow_shop">フォロー %s</string>
    <string name="history">履歴 %s</string>
    <string name="news">お知らせ %s</string>
    <string name="term_of_service">利用規約</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="specific_trade">特定商取引</string>
    <string name="contact_us">お問い合わせ</string>
    <string name="post_hope_of_shop_like">掲載希望のショップ様</string>
    <string name="change_password">パスワード変更</string>

    <!-- Edit Profile screen -->
    <string name="edit_profile">プロフィール編集</string>
    <string name="change_profile_photo">プロフィール写真を変更</string>
    <string name="user_name">ユーザー名</string>
    <string name="email_address">メールアドレス</string>
    <string name="sex">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="lgbt">LGBT</string>
    <string name="prefecture">都道府県</string>
    <string name="save">保存</string>
    <string name="select_photo">Select Photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_from_gallery">Choose from Gallery</string>
    <string name="select_file">Select File</string>
    <string name="sns_connect">連携</string>
    <string name="sns_disconnect">非接続</string>

    <!-- Change password screen -->
    <string name="current_password">現在パスワード</string>
    <string name="new_password">新しいパスワード</string>
    <string name="new_password_confirmation">新しいパスワード(確認)</string>

    <!--Shop following screen -->
    <string name="following">フォロー中</string>
    <string name="add_shop">ショップの追加</string>

    <!--Shop location -->
    <string name="cancel">キャンセル</string>
    <string name="find_current_location">現在地付近でさがす</string>
    <string name="category">カテゴリー</string>

    <!--My faourite screen-->
    <string name="favourite">お気に入り</string>

    <!-- Coupons Detail -->
    <string name="coupons_related">このクーポンのユーザー投稿</string>
    <string name="more">もっと見る \n +%s</string>
    <string name="coupons_other_shop">他のお店の類似クーポン</string>
    <string name="qr_code">QRコード</string>
    <string name="use_this_coupon">このクーポンを使う</string>

    <!-- Shop Detail -->
    <string name="id">ID</string>
    <string name="street_name">住所</string>
    <string name="access">アクセス</string>
    <string name="business_hour">営業時間</string>
    <string name="regular_holiday">定休日</string>
    <string name="average_budget">平均予算</string>
    <string name="phone_number">電話番号</string>
    <string name="call">電話をかける</string>
    <string name="view_on_map">マップで見る</string>
    <string name="share">シェア</string>
    <string name="shop_example_text">説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が ...</string>

    <!--Share Coupon screen -->
    <string name="share_coupon_1">このクーポンを使うためには、</string>
    <string name="share_coupon_2">友人へクーポンをシェアしてください。</string>
    <string name="share_SNS">SNSで送る</string>
    <string name="share_QR">QRコードで送る</string>
    <string name="share_instagram">Instagramでシェア</string>
    <string name="share_facebook">Facebookでシェア</string>
    <string name="share_twitter">Twitterでシェア</string>
    <string name="share_line">LINEでシェア</string>
    <string name="use_coupon_1">QRコードをスタッフに見せて、</string>
    <string name="use_coupon_2">ご利用ください。</string>
    <string name="connecting">ローディング...</string>


    <!--Dialog-->
    <string name="title_alert_dialog">アラート</string>
    <string name="deadline">期限：</string>
    <string name="connection_failed">サーバーがリクエストに失敗しました</string>
    <string name="permission_title">Permission necessary</string>
    <string name="permission_external">External storage permission is necessary</string>
    <string name="network_not_avaiable">ネットワークがなくてチェックしてください。</string>
    <string name="confirm_like_coupon">このクーポンを”like”にしますか。</string>
    <string name="confirm_unlike_coupon">このクーポンを”unlike”にしますか。</string>
    <string name="confirm_follow_shop"> このショップをフォローにしますか。</string>
    <string name="ok">OK</string>

    <!-- Message -->
    <string name="token_expried">Access Token 制限時間になります。再度ログインしてください。</string>
    <string name="server_error">エラー！もう一度お試しください！</string>
    <string name="need_login">貴方はログインしていない。続けるようにログインしてください。</string>
    <string name="cannot_get_user_location">現在のロケーションが見つかりませんでした。もう一度お試しください！</string>
    <string name="line_install">シェアする前にLINEアプリをインストールしてください。</string>
    <string name="instagram_install">シェアする前にInstagramアプリをインストールしてください。</string>
    <string name="input_username">IDを入力してください</string>
    <string name="input_password">パスワードを入力してください。</string>
    <string name="input_email">メールを入力してください。</string>
    <string name="password_not_match">パスワードが違います。</string>
    <string name="email_invalid">メールアドレスが違います。</string>
    <string name="load_avatar_larger_10mb">プロファイル写真のサイズは10MB以上です。他の写真を選択してください。</string>
    <string name="invalid_password">パスワードは６記号以降と特別記号を入力しない。</string>
    <string name="back_to_exit">exitできるようにBACKボタンをクリックしてください。</string>
    <string name="cannot_use_coupon">このクーポンは使用できません</string>
    <string name="no_data">データなし</string>


    <!--Shop Detail -->
    <string name="shop_bill">～%s円</string>

    <!--Use Coupon -->
    <string name="use_promotion_code">USE PROMOTION CODE</string>
    <string name="use_coupon">USE COUPON</string>

    <!--Search -->
    <string name="no_record_found">レコードがない</string>

    <!-- Permisson explain -->
    <string name="location_request">貴方のlocation servicesはオフーにしています。この性能を使用する為オンにしてください。</string>
    <string name="storage_request">この機能を使用できるようにストレージの権限を付与してください。</string>
    <string name="camera_and_storage_request">この機能を使用できるようにストレージ・カメラの権限を付与してください。</string>
    <string name="phone_call_request">この機能を使用できるように携帯のカメラを付与してください。</string>
    <string name="location_denie">この機能を使用できるようにロケーションの権限でアクセスが拒否されました。付与してもう一度お試しください</string>
    <string name="storage_denie">この機能を使用できるようにストレージの権限でアクセスが拒否されました。付与してもう一度お試しください</string>
    <string name="camera_and_storage_denie">この機能を使用できるようにストレージ・カメラの権限でアクセスが拒否されました。付与してもう一度お試しください</string>
    <string name="phone_call_denie">この機能を使用できるように携帯のカメラの権限でアクセスが拒否されました。付与してもう一度お試しください</string>

    <!--Common-->
    <string name="open">開く</string>
    <string name="photo">フォト</string>

</resources>
