<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hunters1984.pon.activities.SignUpEmailActivity">

    <include layout="@layout/include_header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/light_grey_stroke_icon"/>

        <com.hunters1984.pon.customs.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:hint="@string/user_name_registration"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:background="@color/transparent"/>

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:background="@color/light_grey_stroke_icon"/>

        <com.hunters1984.pon.customs.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:background="@color/transparent"/>

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey_stroke_icon"/>

        <com.hunters1984.pon.customs.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:background="@color/transparent"/>

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey_stroke_icon"/>

        <com.hunters1984.pon.customs.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:hint="@string/password_confirm"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:background="@color/transparent"/>

        <View android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/light_grey_stroke_icon"/>
    </LinearLayout>
    <com.hunters1984.pon.customs.CustomButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/registration_with_content"
        android:background="@drawable/background_rectangle_highlight"
        android:textColor="@color/white"
        android:id="@+id/btn_sign_up"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <com.hunters1984.pon.customs.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"
            android:textColor="@color/grey"
            android:textSize="@dimen/edit_profile_font_size" />

        <com.hunters1984.pon.customs.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/edit_profile_font_size"
            android:id="@+id/tv_back_to_login"/>

    </LinearLayout>
</LinearLayout>
