<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_share_coupons"
    android:orientation="vertical"
    tools:context="com.hunters1984.pon.activities.ShareCouponActivity">

    <ImageView
        android:layout_width="@dimen/icon_size_menu"
        android:layout_height="@dimen/icon_size_menu"
        android:layout_margin="10dp"
        android:src="@drawable/ic_close_share"
        android:scaleType="fitXY"
        android:id="@+id/iv_back"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <com.hunters1984.pon.customs.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_coupon_1"
            android:textColor="@color/grey"
            android:textSize="16sp" />
        <com.hunters1984.pon.customs.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_coupon_2"
            android:textColor="@color/grey"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@color/color_background_share_option"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <com.hunters1984.pon.customs.CustomButton
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/share_SNS"
            android:textColor="@color/grey"
            android:background="@color/white"
            android:textSize="16sp"
            android:id="@+id/btn_sns"/>
        <com.hunters1984.pon.customs.CustomButton
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/share_QR"
            android:textColor="@color/grey"
            android:background="@color/transparent"
            android:textSize="16sp"
            android:id="@+id/btn_qr_code"/>
    </LinearLayout>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rl_sns_share">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_rectangle_instagram"
                android:id="@+id/rl_instagram">
                <ImageView
                    android:layout_width="@dimen/icon_size_menu"
                    android:layout_height="@dimen/icon_size_menu"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_instagram"/>
                <com.hunters1984.pon.customs.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="40dp"
                    android:text="@string/share_instagram"
                    android:textSize="18sp"
                    android:textColor="@color/white" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_rectangle_facebook"
                android:id="@+id/rl_facebook_login">
                <ImageView
                    android:layout_width="@dimen/icon_size_menu"
                    android:layout_height="@dimen/icon_size_menu"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_facebook"/>
                <com.hunters1984.pon.customs.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="40dp"
                    android:text="@string/share_facebook"
                    android:textSize="18sp"
                    android:textColor="@color/white" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_rectangle_twitter"
                android:id="@+id/rl_twitter_login">
                <ImageView
                    android:layout_width="@dimen/icon_size_menu"
                    android:layout_height="@dimen/icon_size_menu"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_twitter"/>
                <com.hunters1984.pon.customs.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="10dp"
                    android:text="@string/share_twitter"
                    android:textSize="18sp"
                    android:textColor="@color/white" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_rectangle_line"
                android:id="@+id/rl_email_login">
                <ImageView
                    android:layout_width="@dimen/icon_size_menu"
                    android:layout_height="@dimen/icon_size_menu"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_share_line"/>
                <com.hunters1984.pon.customs.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="50dp"
                    android:text="@string/share_line"
                    android:textSize="18sp"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_qr_code"/>
    </FrameLayout>
</LinearLayout>
