<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hunters.pon.activities.SignInEmailActivity"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <include layout="@layout/include_header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="@color/light_grey_stroke_icon"/>

        <com.hunters.pon.customs.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/color_hint_text"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:background="@color/transparent"
            android:id="@+id/edt_username"/>

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:background="@color/light_grey_stroke_icon"/>

        <com.hunters.pon.customs.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/color_hint_text"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:id="@+id/edt_password"/>

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey_stroke_icon"/>
    </LinearLayout>
    <com.hunters.pon.customs.CustomButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="@drawable/background_rectangle_highlight"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:id="@+id/btn_login"/>

    <com.hunters.pon.customs.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/click_new_member_registration"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/edit_profile_value_font_size"
        android:id="@+id/tv_new_member_registration"/>
</LinearLayout>
