<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hunters.pon.activities.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/include_header_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            android:orientation="vertical">
            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_grey_stroke_icon"/>

            <com.hunters.pon.customs.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:hint="@string/current_password"
                android:textColorHint="@color/color_hint_text"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:background="@color/transparent"
                android:id="@+id/edt_current_password"/>

            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/light_grey_stroke_icon"/>

            <com.hunters.pon.customs.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/color_hint_text"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:id="@+id/edt_new_password"/>

            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/light_grey_stroke_icon"/>

            <com.hunters.pon.customs.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:hint="@string/new_password_confirmation"
                android:textColorHint="@color/color_hint_text"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:id="@+id/edt_new_password_confirmation"/>

            <View android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_grey_stroke_icon"/>
        </LinearLayout>
    </LinearLayout>
    <com.hunters.pon.customs.CustomButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/background_rectangle_highlight"
        android:text="@string/save"
        android:id="@+id/btn_save"/>
</RelativeLayout>
