<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShopCouponByCategoryActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/layout_margin"
        android:paddingRight="@dimen/layout_margin"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:padding="5dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_search"/>
            <com.hunters1984.pon.customs.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/textbox_search_height"
                android:id="@+id/tv_search"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/search_place_shop_name"
                android:background="@android:color/transparent"
                android:textSize="@dimen/font_size_textbox_search"/>
        </LinearLayout>

        <com.hunters1984.pon.customs.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cancel"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:id="@id/tv_search"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:id="@+id/rl_shop_location">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:background="@xml/circle_stroke_light_blue"
            android:src="@drawable/ic_my_location"
            android:scaleType="fitXY"
            android:id="@+id/iv_navigation"/>

        <com.hunters1984.pon.customs.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_detail"
            android:layout_toRightOf="@id/iv_navigation"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_margin"
            android:text="@string/find_current_location"/>

        <ImageView
            android:layout_width="@dimen/icon_size_more_detail"
            android:layout_height="@dimen/icon_size_more_detail"
            android:src="@drawable/ic_detail"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@id/iv_detail"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <com.hunters1984.pon.customs.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_grey"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/category"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_coupon_type"/>
</LinearLayout>
